(fix)Side menu should be visible for large-desktop and hidden for tablet and small desktop (#905)
* Hiding the side menu and showing the hamburger for small desktop

* Minor fixes

--- a/packages/esm-patient-chart-app/src/patient-chart/patient-chart.scss
+++ b/packages/esm-patient-chart-app/src/patient-chart/patient-chart.scss
@@ -29,7 +29,7 @@ $actionPanelExpandedOffset: $actionNavOffset+$actionPanelOffset;
   padding-right: spacing.$spacing-01;
 }
 
-:global(.omrs-breakpoint-gt-tablet) .chartContainer {
+:global(.omrs-breakpoint-gt-small-desktop) .chartContainer {
   margin-left: var(--omrs-sidenav-width);
 }
 
